# justci

./: .gitignore  README.md  apm.lock.yaml  apm.yml  ci.cabal  ci.just  flake.nix  justci.cabal  justci.just  justfile
.agency/: code-police.md  do.md
.apm/skills/ci/: SKILL.md
.apm/skills/justci/: SKILL.md
.claude/: settings.json
.claude/skills/ci/: SKILL.md
.claude/skills/justci/: SKILL.md
app/: Main.hs
src/CI/: CLI.hs  CommitStatus.hs  Fanout.hs  Gh.hs  Git.hs  Hosts.hs  Justfile.hs  LogPath.hs  Nix.hs  Node.hs  Pipeline.hs  Platform.hs  ProcessCompose.hs  Transport.hs  Verdict.hs
src/CI/ProcessCompose/: Events.hs
src/JustCI/: CLI.hs  CommitStatus.hs  Fanout.hs  Gh.hs  Git.hs  Graph.hs  Hosts.hs  Justfile.hs  LogPath.hs  Nix.hs  Node.hs  Pipeline.hs  Platform.hs  ProcessCompose.hs  Root.hs  Subprocess.hs  Transport.hs  Verdict.hs
src/JustCI/ProcessCompose/: Events.hs
test/: Spec.hs
test/CI/: CommitStatusSpec.hs  NodeSpec.hs  PlatformSpec.hs  ProcessComposeSpec.hs  TransportSpec.hs  VerdictSpec.hs
test/JustCI/: CommitStatusSpec.hs  FanoutSpec.hs  HostsSpec.hs  JustfileSpec.hs  NodeSpec.hs  PipelineSpec.hs  PlatformSpec.hs  ProcessComposeSpec.hs  TransportSpec.hs  VerdictSpec.hs
