cabal-version:   3.0
name:            ci
version:         0.1.0.0
license:         NONE
build-type:      Simple

common warnings
    ghc-options: -Wall -threaded

library
    import:           warnings
    exposed-modules:  CI.CLI
                      CI.CommitStatus
                      CI.Fanout
                      CI.Gh
                      CI.Git
                      CI.Graph
                      CI.Hosts
                      CI.Justfile
                      CI.LogPath
                      CI.Nix
                      CI.Node
                      CI.Pipeline
                      CI.Platform
                      CI.ProcessCompose
                      CI.ProcessCompose.Events
                      CI.Root
                      CI.Subprocess
                      CI.Transport
                      CI.Verdict
    build-depends:
        , aeson
        , algebraic-graphs
        , async
        , base
        , bytestring
        , containers
        , directory
        , filepath
        , network
        , optparse-applicative
        , process
        , template-haskell
        , th-env
        , text
        , text-display
        , time
        , websockets
        , which
        , yaml
    hs-source-dirs:   src
    default-language: Haskell2010

executable ci
    import:           warnings
    main-is:          Main.hs
    build-depends:
        , base
        , ci
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite ci-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    CI.CommitStatusSpec
                      CI.JustfileSpec
                      CI.NodeSpec
                      CI.PlatformSpec
                      CI.ProcessComposeSpec
                      CI.TransportSpec
                      CI.VerdictSpec
    build-depends:
        , algebraic-graphs
        , base
        , bytestring
        , ci
        , containers
        , hspec
        , text
        , text-display
        , yaml
    hs-source-dirs:   test
    default-language: Haskell2010
