cabal-version:   3.0
name:            justci
version:         0.1.0.0
license:         NONE
build-type:      Simple

common warnings
    ghc-options: -Wall -threaded

library
    import:           warnings
    exposed-modules:  JustCI.CLI
                      JustCI.CommitStatus
                      JustCI.Fanout
                      JustCI.Gh
                      JustCI.Git
                      JustCI.Graph
                      JustCI.Hosts
                      JustCI.Justfile
                      JustCI.LogPath
                      JustCI.Nix
                      JustCI.Node
                      JustCI.Pipeline
                      JustCI.Platform
                      JustCI.ProcessCompose
                      JustCI.ProcessCompose.Events
                      JustCI.Root
                      JustCI.Subprocess
                      JustCI.Transport
                      JustCI.Verdict
    build-depends:
        , aeson
        , algebraic-graphs
        , async
        , base
        , bytestring
        , containers
        , directory
        , filepath
        , network
        , optparse-applicative
        , process
        , template-haskell
        , th-env
        , text
        , text-display
        , time
        , websockets
        , which
        , yaml
    hs-source-dirs:   src
    default-language: Haskell2010

executable justci
    import:           warnings
    main-is:          Main.hs
    build-depends:
        , base
        , justci
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite justci-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    JustCI.CommitStatusSpec
                      JustCI.FanoutSpec
                      JustCI.JustfileSpec
                      JustCI.NodeSpec
                      JustCI.PlatformSpec
                      JustCI.ProcessComposeSpec
                      JustCI.TransportSpec
                      JustCI.VerdictSpec
    build-depends:
        , algebraic-graphs
        , base
        , bytestring
        , containers
        , hspec
        , justci
        , text
        , text-display
        , yaml
    hs-source-dirs:   test
    default-language: Haskell2010
